RESOLVED FIXED11429
Startup crash on Qt platform
https://bugs.webkit.org/show_bug.cgi?id=11429
Summary Startup crash on Qt platform
Zack Rusin
Reported 2006-10-27 04:33:19 PDT
When calling FrameQtClient::openUrl for the first time, the owned frames doesn't have a document set on it at all. In turn ResourceLoader depends on the DocumentLoader in order to work and Qt's ResourceLoaderManager depends on it being present in order to set Frame (in order to call checkLoaded). openUrl used to let through creation of ResourceLoader with no parent document which causes crashes due to above described dependencies. The patch explictly creates an empty document if one isn't already present.
Attachments
Mentioned patch to fix the crash. (920 bytes, patch)
2006-10-27 04:34 PDT, Zack Rusin
no flags
Updated patch with ChangeLog (1.40 KB, patch)
2006-10-30 11:58 PST, Nikolas Zimmermann
andersca: review+
Zack Rusin
Comment 1 2006-10-27 04:34:41 PDT
Created attachment 11237 [details] Mentioned patch to fix the crash.
Nikolas Zimmermann
Comment 2 2006-10-30 11:58:26 PST
Created attachment 11288 [details] Updated patch with ChangeLog
Anders Carlsson
Comment 3 2006-10-30 11:59:05 PST
Comment on attachment 11288 [details] Updated patch with ChangeLog r=me
Anders Carlsson
Comment 4 2006-10-30 11:59:15 PST
Comment on attachment 11288 [details] Updated patch with ChangeLog r=me
Alexey Proskuryakov
Comment 5 2006-10-31 10:33:00 PST
This was landed by Anders in r17441.
Note You need to log in before you can comment on or make changes to this bug.