2006-10-30  Nikolas Zimmermann  <zimmermann@kde.org>

Reviewed and landed by Anders.

        Patch by Zack rusin to fix:
        http://bugs.webkit.org/show_bug.cgi?id=11429

        Fix startup crash.

        * platform/qt/FrameQtClient.cpp:
        (WebCore::FrameQtClientDefault::openURL):


Canonical link: https://commits.webkit.org/14662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17441 268f45cc-cd09-0410-ab3c-d52691b4dbfc